argocd/apps/koillection/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: koillection
  labels:
    name: koillection
