argocd/apps/koillection/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koillection
  namespace: koillection
  labels:
    app: koillection
spec:
  selector:
    matchLabels:
      app: koillection
  replicas: 1
  template:
    metadata:
      labels:
        app: koillection
    spec:
      containers:
        - name: koillection
          image: koillection/koillection:1.5.4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /uploads
              name: koillection-uploads
              readOnly: False
          resources: {}
      restartPolicy: Always
      volumes:
        - name: koillection-uploads
          persistentVolumeClaim:
            claimName: koillection-uploads
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: koillection
  labels:
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - image: postgres:16.1-alpine3.19
          name: postgresql
          ports:
            - containerPort: 5432
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: postgresql-data
      restartPolicy: Always
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-data
