argocd/apps/koillection/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  postgresql
  namespace: koillection
spec:
  selector:
    app:  postgresql
  type: ClusterIP
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name:  koillection
  namespace: koillection
spec:
  selector:
    app:  koillection
  type: ClusterIP
  ports:
    - name: postgresql
      port: 8080
      protocol: TCP
      targetPort: 80
